fix: extra spacing on mobile between section on landing page

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -393,3 +393,7 @@
         opacity: 1;
     }
 }
+
+.landing-gradient {
+    background-image: linear-gradient(to bottom, #E58525 0%, #E58525 15%, transparent 80%);
+}
